[package]
name = "ctrl"
version = "0.1.0"
authors = ["Lars Jellema <lars.jellema@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiss3d = "0.22.1"
nalgebra = "0.19.0"
nphysics3d = "0.13.0"
ncollide3d = "0.21.0"
num = "0.2.0"
