[package]
name = "ctrl"
version = "0.1.0"
authors = ["Lars Jellema <lars.jellema@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kiss3d = "0.33.0"
nalgebra = "0.29.0"
nphysics3d = "0.24.0"
ncollide3d = "0.32.0"
num = "0.4.3"
rand = "0.8.5"
